--- a/style.css
+++ b/style.css
@@ -3,8 +3,6 @@ body{
     margin: 0px;
     font-size: 18px;
     cursor: url(cursor.png), pointer;
-    color: blue;
-
 }
 
 .header{
@@ -18,4 +16,51 @@ body{
 h1{
     margin: 0px;
     font-size: 60px;
-    color: blue;
+}
+
+h2{
+    font-size: 40px;
+}
+
+h4{
+    margin-top: 5px;
+    margin-bottom: 3px;
+}
+
+nav{
+    display: flex;
+    justify-content: center;
+    font-size: 28px;
+}
+
+nav>a{
+    margin: 0 8px;
+}
+
+.scard{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    padding: 15px;
+    border-bottom-style: solid;
+    border-bottom-color: #efefef;
+}
+
+.scard>div{
+    padding: 10px;
+}
+
+.cardimg{
+    max-width: 25%;
+}
+
+.cardimg>img{
+    max-width: 100%;
+    max-height: 25vh;
+}
+
+.sec{
+    border-bottom-style: solid;
+    border-bottom-color: #efefef;
+    padding: 15px 0;
+}
